# grafin

./: .env.example  Cargo.toml  README.md  docker-compose.yml
apps/api/fia/: Cargo.toml
apps/cli/fi/: Cargo.toml
apps/cli/fi/src/: main.rs
libs/fi_grafana/: Cargo.toml
libs/fi_grafana/src/: error.rs  lib.rs
libs/fi_grafana/src/api/: grafana.rs
libs/fi_grafana/src/cli/: mod.rs
libs/fi_grafana/src/cli/annotation/: add.rs  mod.rs  options.rs
libs/fi_grafana/src/cli/dashboard/: add.rs  get.rs  mod.rs  options.rs  search.rs
libs/fi_grafana/src/cli/folder/: add.rs  get.rs  mod.rs  options.rs  post.rs
libs/fi_grafana/src/cli/folder/permission/: mod.rs  options.rs  post.rs  set.rs
libs/fi_grafana/src/cli/permission/: options.rs  post.rs
libs/fi_grafana/src/cli/role/: mod.rs
libs/fi_grafana/src/cli/service_account/: mod.rs
libs/fi_grafana/src/cli/shell/: date.rs  input.rs  mod.rs  request.rs
libs/fi_grafana/src/cli/team/: add.rs  delete.rs  get.rs  mod.rs  options.rs  post.rs
libs/fi_grafana/src/cli/user/: mod.rs
