[workspace]
resolver = "2"
members = ["apps/api/fia", "apps/cli/fi", "libs/fi_grafana"]

[workspace.dependencies]
axum = "0.7.5"
chrono = "0.4.38"
clap = { version = "4.5.11", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_url_params = "0.2.1"
serde_with = "3.9.0"
serde_json = "1.0.121"
serde_yaml = "0.9.33"
thiserror = "1.0.63"
displaydoc = "0.2.5"
dotenvy = "0.15.7"

fi_grafana = { path = "libs/fi_grafana" }
