[package]
name = "fi_grafana"
version = "0.1.0"
edition = "2021"
description = "f-i grafana request library"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_url_params = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
displaydoc = { workspace = true }