[package]
name = "fia"
version = "0.1.0"
edition = "2021"
description = "f-i grafana request preparee api"

[[bin]]
name = "fia"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }